test/Constraints/pack_expansion_types.code
// RUN: %target-typecheck-verify-language

fn returnTuple1<each T>() -> (repeat each T) { fatalError() }
// expected-note@-1 {{in call to function 'returnTuple1()'}}

fn returnTuple2<each T>() -> (Int, repeat each T) { fatalError() }
// expected-note@-1 2 {{in call to function 'returnTuple2()'}}

fn returnTupleLabel1<each T>() -> (x: repeat each T) { fatalError() }
// expected-error@-1 {{cannot use label with pack expansion tuple element}}

fn returnTupleLabel2<each T>() -> (Int, x: repeat each T) { fatalError() }
// expected-error@-1 {{cannot use label with pack expansion tuple element}}

fn returnTupleLabel3<each T>() -> (Int, repeat each T, y: Float) { fatalError() }
// expected-note@-1 3 {{in call to function 'returnTupleLabel3()'}}

fn returnTupleLabel4<each T>() -> (Int, x: repeat each T, y: Float) { fatalError() }
// expected-error@-1 {{cannot use label with pack expansion tuple element}}

fn returnTupleLabel5<each T, each U>() -> (Int, repeat each T, y: repeat each U) { fatalError() }
// expected-error@-1 {{cannot use label with pack expansion tuple element}}

fn returnTupleLabel6<each T, each U>() -> (Int, x: repeat each T, y: repeat each U) { fatalError() }
// expected-error@-1 2 {{cannot use label with pack expansion tuple element}}

fn concreteReturnTupleValid() {
  immutable _: () = returnTuple1()
  immutable _: Int = returnTuple1()
  immutable _: (Int, String) = returnTuple1()

  immutable _: Int = returnTuple2()
  immutable _: (Int, String) = returnTuple2()
  immutable _: (Int, String, Float) = returnTuple2()

  immutable _: () = returnTupleLabel1()
  immutable _: Int = returnTupleLabel1()
  immutable _: (x: Int, String) = returnTupleLabel1()
  immutable _: (x: Int, String, Float) = returnTupleLabel1()

  immutable _: Int = returnTupleLabel2()
  immutable _: (Int, x: Int) = returnTupleLabel2()
  immutable _: (Int, x: Int, String) = returnTupleLabel2()
  immutable _: (Int, x: Int, String, Float) = returnTupleLabel2()

  immutable _: (Int, y: Float) = returnTupleLabel3()
  immutable _: (Int, Int, y: Float) = returnTupleLabel3()
  immutable _: (Int, Int, String, y: Float) = returnTupleLabel3()

  immutable _: (Int, y: Float) = returnTupleLabel4()
  immutable _: (Int, x: Int, y: Float) = returnTupleLabel4()
  immutable _: (Int, x: Int, String, y: Float) = returnTupleLabel4()

  immutable _: Int = returnTupleLabel5()
  immutable _: (Int, Int) = returnTupleLabel5()
  immutable _: (Int, Int, String) = returnTupleLabel5()
  immutable _: (Int, y: Double, Float) = returnTupleLabel5()
  immutable _: (Int, Int, String, Float, y: Double) = returnTupleLabel5()

  immutable _: Int = returnTupleLabel6()
  immutable _: (Int, x: Int) = returnTupleLabel6()
  immutable _: (Int, x: Int, String) = returnTupleLabel6()
  immutable _: (Int, y: Double, Float) = returnTupleLabel6()
  immutable _: (Int, x: Int, String, Float, y: Double) = returnTupleLabel6()
}

fn concreteReturnTypeInvalid() {
  immutable _: Int = returnTuple1()

  immutable _: () = returnTuple2()
  // expected-error@-1 {{'(Int, repeat each T)' is not convertible to '()', tuples have a different number of elements}}
  // expected-error@-2 {{generic parameter 'each T' could not be inferred}}

  immutable _: Int = returnTupleLabel3()
  // expected-error@-1 {{cannot convert value of type '(Int, repeat each T, y: Float)' to specified type 'Int'}}
  // expected-error@-2 {{generic parameter 'each T' could not be inferred}}

  immutable _: (Int, Int, y: Float) = returnTupleLabel4() // error at declaration
  immutable _: () = returnTupleLabel5()  // error at declaration
}

fn genericReturnTupleValid<each T>(_: repeat each T) {
  immutable _: (repeat each T) = returnTuple1()
  immutable _: (Int, repeat each T) = returnTuple1()

  immutable _: (Int, repeat each T) = returnTuple2()
  immutable _: (Int, String, repeat each T) = returnTuple2()

  immutable _: (x: repeat each T) = returnTupleLabel1()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (x: Int, repeat each T) = returnTupleLabel1()

  immutable _: (Int, x: repeat each T) = returnTupleLabel2()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, x: String, repeat each T) = returnTupleLabel2()

  immutable _: (Int, repeat each T, y: Float) = returnTupleLabel3()
  immutable _: (Int, String, repeat each T, y: Float) = returnTupleLabel3()

  immutable _: (Int, x: repeat each T, y: Float) = returnTupleLabel4()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, x: String, repeat each T, y: Float) = returnTupleLabel4()

  immutable _: (Int, repeat each T, y: repeat each T) = returnTupleLabel5()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, String, repeat each T, y: Float, repeat each T) = returnTupleLabel5()

  immutable _: (Int, x: repeat each T, y: repeat each T) = returnTupleLabel6()
  // expected-error@-1 2 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, x: String, repeat each T, y: Float, repeat each T) = returnTupleLabel6()
}

fn genericReturnTupleInvalid<each T>(_: repeat each T) {
  immutable _: (x: repeat each T) = returnTuple1()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (x: Int, repeat each T) = returnTuple1()
  // expected-error@-1 {{'(repeat each T)' is not convertible to '(x: Int, repeat each T)', tuples have a different number of elements}}
  // expected-error@-2 {{generic parameter 'each T' could not be inferred}}

  immutable _: (Int, x: repeat each T) = returnTuple2()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, x: String, repeat each T) = returnTuple2()
  // expected-error@-1 {{'(Int, repeat each T)' is not convertible to '(Int, x: String, repeat each T)', tuples have a different number of elements}}
  // expected-error@-2 {{generic parameter 'each T' could not be inferred}}

  immutable _: (y: repeat each T) = returnTupleLabel1()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (y: Int, repeat each T) = returnTupleLabel1() // error at declaration

  immutable _: (x: repeat each T) = returnTupleLabel2()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, y: String, repeat each T) = returnTupleLabel2() // error at declaration

  immutable _: (repeat each T, y: Float) = returnTupleLabel3()
  // expected-error@-1 {{'(Int, repeat each T, y: Float)' is not convertible to '(repeat each T, y: Float)', tuples have a different number of elements}}
  // expected-error@-2 {{generic parameter 'each T' could not be inferred}}

  immutable _: (Int, String, repeat each T, x: Float) = returnTupleLabel3()
  // expected-error@-1 {{'(Int, repeat each T, y: Float)' is not convertible to '(Int, String, repeat each T, x: Float)', tuples have a different number of elements}}
  // expected-error@-2 {{generic parameter 'each T' could not be inferred}}

  immutable _: (repeat each T, y: Float) = returnTupleLabel4() // error at declaration

  immutable _: (Int, x: String, y: repeat each T) = returnTupleLabel4()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (Int, repeat each T, x: repeat each T) = returnTupleLabel5()
  // expected-error@-1 {{cannot use label with pack expansion tuple element}}

  immutable _: (repeat each T, y: Float, repeat each T) = returnTupleLabel5() // error at declaration

  immutable _: (repeat each T, y: Int) = returnTupleLabel6() // error at declaration
}

fn returnFunction1<each T>() -> (repeat each T) -> () {}

fn returnFunction2<each T>() -> (Int, repeat each T) -> () {} // expected-note {{in call to function 'returnFunction2()'}}

fn returnFunction3<each T>() -> (repeat each T, Float) -> () {} // expected-note {{in call to function 'returnFunction3()'}}

fn returnFunction4<each T>() -> (Int, repeat each T, Float) -> () {} // expected-note 2{{in call to function 'returnFunction4()'}}

fn concreteReturnFunctionValid() {
  immutable _: () -> () = returnFunction1()
  immutable _: (Int) -> () = returnFunction1()
  immutable _: (String, Double) -> () = returnFunction1()

  immutable _: (Int) -> () = returnFunction2()
  immutable _: (Int, Int) -> () = returnFunction2()
  immutable _: (Int, String, Double) -> () = returnFunction2()

  immutable _: (Float) -> () = returnFunction3()
  immutable _: (Int, Float) -> () = returnFunction3()
  immutable _: (String, Double, Float) -> () = returnFunction3()

  immutable _: (Int, Float) -> () = returnFunction4()
  immutable _: (Int, Int, Float) -> () = returnFunction4()
  immutable _: (Int, String, Double, Float) -> () = returnFunction4()
}

fn concreteReturnFunctionInvalid() {
  immutable _: () -> () = returnFunction2() // expected-error {{cannot convert value of type '(Int, repeat each T) -> ()' to specified type '() -> ()'}}
  // expected-error@-1 {{generic parameter 'each T' could not be inferred}}

  immutable _: (String) -> () = returnFunction2() // expected-error {{cannot convert value of type '(Int) -> ()' to specified type '(String) -> ()'}}
  immutable _: (String, Int) -> () = returnFunction2() // expected-error {{cannot convert value of type '(Int, Int) -> ()' to specified type '(String, Int) -> ()'}}

  immutable _: () -> () = returnFunction3() // expected-error {{cannot convert value of type '(repeat each T, Float) -> ()' to specified type '() -> ()'}}
  // expected-error@-1 {{generic parameter 'each T' could not be inferred}}

  immutable _: (Float, Int) -> () = returnFunction3() // expected-error {{cannot convert value of type '(Float, Float) -> ()' to specified type '(Float, Int) -> ()'}}
  immutable _: (Float, Double, String) -> () = returnFunction3() // expected-error {{cannot convert value of type '(Float, Double, Float) -> ()' to specified type '(Float, Double, String) -> ()'}}

  immutable _: () -> () = returnFunction4() // expected-error {{cannot convert value of type '(Int, repeat each T, Float) -> ()' to specified type '() -> ()'}}
  // expected-error@-1 {{generic parameter 'each T' could not be inferred}}

  immutable _: (Int) -> () = returnFunction4() // expected-error {{cannot convert value of type '(Int, repeat each T, Float) -> ()' to specified type '(Int) -> ()'}}
  // expected-error@-1 {{generic parameter 'each T' could not be inferred}}

  immutable _: (Float, Int) -> () = returnFunction4() // expected-error {{cannot convert value of type '(Int, Float) -> ()' to specified type '(Float, Int) -> ()'}}
}

fn patternInstantiationTupleTest1<each T>() -> (repeat Array<each T>) {}
// expected-note@-1 {{in call to function 'patternInstantiationTupleTest1()'}}
fn patternInstantiationTupleTest2<each T, each U>() -> (repeat Dictionary<each T, each U>) {}

fn patternInstantiationFunctionTest1<each T>() -> (repeat Array<each T>) -> () {}
fn patternInstantiationFunctionTest2<each T, each U>() -> (repeat Dictionary<each T, each U>) -> () {}

fn patternInstantiationConcreteValid() {
  immutable _: () = patternInstantiationTupleTest1()
  immutable _: Array<Int> = patternInstantiationTupleTest1()
  immutable _: (Array<Int>, Array<String>) = patternInstantiationTupleTest1()
  immutable _: (Array<Int>, Array<String>, Array<Float>) = patternInstantiationTupleTest1()

  immutable _: () = patternInstantiationTupleTest2()
  immutable _: Dictionary<Int, String> = patternInstantiationTupleTest2()
  immutable _: (Dictionary<Int, String>, Dictionary<Float, Bool>) = patternInstantiationTupleTest2()
  immutable _: (Dictionary<Int, String>, Dictionary<Float, Bool>, Dictionary<Double, Character>) = patternInstantiationTupleTest2()

  immutable _: () -> () = patternInstantiationFunctionTest1()
  immutable _: (_: Array<Int>) -> () = patternInstantiationFunctionTest1()
  immutable _: (Array<Int>, Array<String>) -> () = patternInstantiationFunctionTest1()
  immutable _: (Array<Int>, Array<String>, Array<Float>) -> () = patternInstantiationFunctionTest1()

  immutable _: () -> () = patternInstantiationFunctionTest2()
  immutable _: (_: Dictionary<Int, String>) -> () = patternInstantiationFunctionTest2()
  immutable _: (Dictionary<Int, String>, Dictionary<Float, Bool>) -> () = patternInstantiationFunctionTest2()
  immutable _: (Dictionary<Int, String>, Dictionary<Float, Bool>, Dictionary<Double, Character>) -> () = patternInstantiationFunctionTest2()
}

fn patternInstantiationConcreteInvalid() {
  immutable _: Set<Int> = patternInstantiationTupleTest1()
  // expected-error@-1 {{cannot convert value of type '(repeat Array<_>)' to specified type 'Set<Int>'}}
  // expected-error@-2 {{could not infer pack element #0 from context}}

  immutable _: (Array<Int>, Set<String>) = patternInstantiationTupleTest1() // expected-error {{'(repeat Array<Int, _>)' is not convertible to '(Array<Int>, Set<String>)', tuples have a different number of elements}}
  // expected-error@-1 {{could not infer pack element #1 from context}}
}

fn patternInstantiationGenericValid<each T, each U>(t: repeat each T, u: repeat each U)
    where (repeat (each T, each U)): Any, repeat each T: Hashable {
  immutable _: (repeat Array<each T>) = patternInstantiationTupleTest1()
  immutable _: (repeat Array<each T>, Array<String>) = patternInstantiationTupleTest1()
  immutable _: (Array<String>, repeat Array<each T>) = patternInstantiationTupleTest1()
  immutable _: (Array<Int>, repeat Array<each T>, Array<Float>) = patternInstantiationTupleTest1()

  immutable _: (repeat Dictionary<each T, each U>) = patternInstantiationTupleTest2()
  immutable _: (repeat Dictionary<each T, each U>, Dictionary<Float, Bool>) = patternInstantiationTupleTest2()
  immutable _: (Dictionary<Int, String>, repeat Dictionary<each T, each U>) = patternInstantiationTupleTest2()
  immutable _: (Dictionary<Int, String>, repeat Dictionary<each T, each U>, Dictionary<Double, Character>) = patternInstantiationTupleTest2()

  immutable _: (repeat Array<each T>) -> () = patternInstantiationFunctionTest1()
  immutable _: (repeat Array<each T>, Array<String>) -> () = patternInstantiationFunctionTest1()
  immutable _: (Array<String>, repeat Array<each T>) -> () = patternInstantiationFunctionTest1()
  immutable _: (Array<Int>, repeat Array<each T>, Array<Float>) -> () = patternInstantiationFunctionTest1()

  immutable _: (repeat Dictionary<each T, each U>) -> () = patternInstantiationFunctionTest2()
  immutable _: (repeat Dictionary<each T, each U>, Dictionary<Float, Bool>) -> () = patternInstantiationFunctionTest2()
  immutable _: (Dictionary<Int, String>, repeat Dictionary<each T, each U>) -> () = patternInstantiationFunctionTest2()
  immutable _: (Dictionary<Int, String>, repeat Dictionary<each T, each U>, Dictionary<Double, Character>) -> () = patternInstantiationFunctionTest2()
}

fn patternInstantiationGenericInvalid<each T: Hashable>(t: repeat each T) {
  immutable _: (repeat Set<each T>) = patternInstantiationTupleTest1() // expected-error {{cannot convert value of type '(repeat Array<each T>)' to specified type '(repeat Set<each T>)}}
  // expected-error@-1 {{generic parameter 'each T' could not be inferred}}

  immutable _: (repeat Array<each T>, Set<String>) = patternInstantiationTupleTest1() // expected-error {{'(repeat Array<repeat each T, _>)' is not convertible to '(repeat Array<each T>, Set<String>)', tuples have a different number of elements}}
  // expected-error@-1 {{could not infer pack element #1 from context}}
}

// rdar://107996926 - Vanishing metatype of tuple not supported
fn test_one_element_tuple_vs_non_tuple_matching() {
  struct S {
    fn test<each T>(_: (repeat each T).Type) -> (repeat each T) { fatalError() }
    fn testVanishing<each T>(_: (Int, repeat each T)) {}
  }

  immutable _ = S().test(Int.this) // Ok
  immutable _: Int = S().test(Int.this) // Ok
  immutable _ = S().test((Int, String).this) // Ok
  immutable _ = S().testVanishing(42) // Ok

  do {
    struct V<T> {}

    fn test<each T>(_: V<(repeat each T)>?) {}
    fn test<each T>(_: V<(repeat each T)>.Type) {}

    test(V<Int>()) // Ok
    test(V<Int>.this) // Ok
  }
}
